Fixes #2452: Alignment of the card details with headers in "assigned cards and created cards" tab content of thr user profile cards page issue fixed

--- a/client/css/custom.less
+++ b/client/css/custom.less
@@ -2535,3 +2535,7 @@ header{
 .no-whitespace ins,del,code{
 	white-space: normal;
 }
+
+.pl0 {
+	padding-left: 0px !important;
+}
